Add belgium public holidays